package com.distributed.phonebook.service;

import io.grpc.ManagedChannel;
import io.grpc.ManagedChannelBuilder;
import io.grpc.StatusRuntimeException;
import org.springframework.stereotype.Service;
import com.distributed.phonebook.*;

import javax.annotation.PostConstruct;
import javax.annotation.PreDestroy;
import java.util.List;
import java.util.concurrent.TimeUnit;

/**
 * gRPC Client Service for communicating with Python Database Server
 * Handles all cross-language communication between Java web server and Python gRPC server
 */
@Service
public class PhonebookGrpcClient {
    
    private ManagedChannel channel;
    private PhonebookServiceGrpc.PhonebookServiceBlockingStub blockingStub;
    
    @PostConstruct
    public void init() {
        initializeConnection();
    }
    
    private void initializeConnection() {
        try {
            // Get gRPC server details from environment or use defaults
            String grpcHost = System.getenv("GRPC_SERVER_HOST");
            String grpcPortStr = System.getenv("GRPC_SERVER_PORT");
            
            // Default values for local development
            if (grpcHost == null) grpcHost = "localhost";
            int grpcPort = grpcPortStr != null ? Integer.parseInt(grpcPortStr) : 50051;
            
            System.out.println("üîó Initializing gRPC connection to Python server at " + grpcHost + ":" + grpcPort + "...");
            
            // Create gRPC channel to Python server
            channel = ManagedChannelBuilder.forAddress(grpcHost, grpcPort)
                    .usePlaintext()
                    .keepAliveTime(30, TimeUnit.SECONDS)
                    .keepAliveTimeout(5, TimeUnit.SECONDS)
                    .keepAliveWithoutCalls(true)
                    .build();
            
            blockingStub = PhonebookServiceGrpc.newBlockingStub(channel);
            
            // Test the connection with timeout
            Empty testRequest = Empty.newBuilder().build();
            ContactList testResponse = blockingStub
                    .withDeadlineAfter(5, TimeUnit.SECONDS)
                    .listContacts(testRequest);
            
            System.out.println("‚úÖ gRPC Client connected successfully to Python Database Server");
            System.out.println("üìä Connection test successful - found " + testResponse.getCount() + " existing contacts");
            
        } catch (Exception e) {
            System.err.println("‚ùå Failed to connect to Python gRPC server: " + e.getMessage());
            System.err.println("üîÑ gRPC calls will attempt reconnection automatically");
            // Set stub to null so we know connection failed
            blockingStub = null;
        }
    }
    
    private boolean ensureConnection() {
        if (blockingStub == null) {
            System.out.println("üîÑ Attempting to reconnect to Python gRPC server...");
            initializeConnection();
        }
        return blockingStub != null;
    }
    
    @PreDestroy
    public void shutdown() throws InterruptedException {
        if (channel != null) {
            channel.shutdown().awaitTermination(5, TimeUnit.SECONDS);
            System.out.println("üîå gRPC Client connection closed");
        }
    }
    
    /**
     * Add a new contact to the phonebook
     */
    public ContactResponse addContact(String name, String phoneNumber, String email, String address) {
        if (!ensureConnection()) {
            System.err.println("‚ùå Unable to establish gRPC connection");
            return ContactResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("gRPC server connection not available")
                    .build();
        }
        
        try {
            Contact contact = Contact.newBuilder()
                    .setName(name)
                    .setPhoneNumber(phoneNumber)
                    .setEmail(email != null ? email : "")
                    .setAddress(address != null ? address : "")
                    // ID will be auto-generated by server
                    .build();
            
            ContactRequest request = ContactRequest.newBuilder()
                    .setContact(contact)
                    .build();
            
            ContactResponse response = blockingStub
                    .withDeadlineAfter(10, TimeUnit.SECONDS)
                    .addContact(request);
            System.out.println("‚ûï Java ‚Üí Python: Added contact " + name);
            return response;
            
        } catch (StatusRuntimeException e) {
            System.err.println("‚ùå gRPC call failed: " + e.getStatus());
            // Reset connection on failure
            blockingStub = null;
            return ContactResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Failed to add contact: " + e.getStatus().getDescription())
                    .build();
        }
    }
    
    /**
     * Get a contact by phone number
     */
    public ContactResponse getContact(String phoneNumber) {
        try {
            ContactRequest request = ContactRequest.newBuilder()
                    .setPhoneNumber(phoneNumber)
                    .build();
            
            ContactResponse response = blockingStub.getContact(request);
            if (response.getSuccess()) {
                System.out.println("üîç Java ‚Üí Python: Retrieved contact " + response.getContact().getName());
            }
            return response;
            
        } catch (StatusRuntimeException e) {
            System.err.println("‚ùå gRPC call failed: " + e.getStatus());
            return ContactResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Failed to get contact: " + e.getStatus().getDescription())
                    .build();
        }
    }
    
    /**
     * Get a contact by ID
     */
    public ContactResponse getContactById(int id) {
        try {
            ContactRequest request = ContactRequest.newBuilder()
                    .setId(id)
                    .build();
            
            ContactResponse response = blockingStub.getContact(request);
            if (response.getSuccess()) {
                System.out.println("üîç Java ‚Üí Python: Retrieved contact by ID " + id + ": " + response.getContact().getName());
            }
            return response;
            
        } catch (StatusRuntimeException e) {
            System.err.println("‚ùå gRPC call failed: " + e.getStatus());
            return ContactResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Failed to get contact: " + e.getStatus().getDescription())
                    .build();
        }
    }

    /**
     * Update an existing contact by ID
     */
    public ContactResponse updateContact(int id, String name, String phoneNumber, String email, String address) {
        try {
            Contact contact = Contact.newBuilder()
                    .setId(id)  // Preserve the ID
                    .setName(name)
                    .setPhoneNumber(phoneNumber)
                    .setEmail(email)
                    .setAddress(address)
                    .build();
            
            ContactRequest request = ContactRequest.newBuilder()
                    .setId(id)
                    .setContact(contact)
                    .build();
            
            ContactResponse response = blockingStub.updateContact(request);
            System.out.println("‚úèÔ∏è Java ‚Üí Python: Updated contact ID " + id + ": " + name);
            return response;
            
        } catch (StatusRuntimeException e) {
            System.err.println("‚ùå gRPC call failed: " + e.getStatus());
            return ContactResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Failed to update contact: " + e.getStatus().getDescription())
                    .build();
        }
    }
    
    /**
     * Delete a contact by ID
     */
    public ContactResponse deleteContact(int id) {
        try {
            ContactRequest request = ContactRequest.newBuilder()
                    .setId(id)
                    .build();
            
            ContactResponse response = blockingStub.deleteContact(request);
            System.out.println("üóëÔ∏è Java ‚Üí Python: Deleted contact ID " + id);
            return response;
            
        } catch (StatusRuntimeException e) {
            System.err.println("‚ùå gRPC call failed: " + e.getStatus());
            return ContactResponse.newBuilder()
                    .setSuccess(false)
                    .setMessage("Failed to delete contact: " + e.getStatus().getDescription())
                    .build();
        }
    }
    
    /**
     * List all contacts in the phonebook
     */
    public ContactList listAllContacts() {
        if (!ensureConnection()) {
            System.err.println("‚ùå Unable to establish gRPC connection");
            return ContactList.newBuilder()
                    .setCount(0)
                    .build();
        }
        
        try {
            Empty empty = Empty.newBuilder().build();
            ContactList response = blockingStub
                    .withDeadlineAfter(10, TimeUnit.SECONDS)
                    .listContacts(empty);
            System.out.println("üìã Java ‚Üí Python: Retrieved " + response.getCount() + " contacts");
            return response;
            
        } catch (StatusRuntimeException e) {
            System.err.println("‚ùå gRPC call failed: " + e.getStatus());
            // Reset connection on failure
            blockingStub = null;
            return ContactList.newBuilder()
                    .setCount(0)
                    .build();
        }
    }
}